Finished working on mobile version. Fixed some details.

--- a/www/Styles/Views/MainView.less
+++ b/www/Styles/Views/MainView.less
@@ -3,20 +3,21 @@
   font-size: 1.87em;
 
   .content {
-    width: 465px;
+    width: 680px;
     margin: auto;
   }
 
   .logo {
     background-image: url("../Assets/logo.png");
     background-repeat: no-repeat;
+    background-position: center center;
     height: 211px;
-    width: 211px;
+    width: 300px;
     float: left;
   }
 
   .text {
-    margin-left: 50px;
+    margin-left: 30px;
     width: 200px;
     float: left;
   }
@@ -62,7 +63,7 @@
 
   .about-us {
     width: 680px;
-    margin: 100px auto 0 auto;
+    margin: 75px auto 0 auto;
     text-transform: uppercase;
 
     .location {
