--- a/www/Styles/Views/MapView.less
+++ b/www/Styles/Views/MapView.less
@@ -1,7 +1,7 @@
 .map-view {
   .title {
     margin-bottom: 15px;
-    font-size: 0.4em;
+    font-size: 0.5em;
   }
 
   .map {
