--- a/www/Styles/Views/OurStoryView.less
+++ b/www/Styles/Views/OurStoryView.less
@@ -1,7 +1,7 @@
 .our-story-view {
   .title {
     margin-bottom: 15px;
-    font-size: 0.4em;
+    font-size: 0.5em;
   }
 
   .instagram-feed {
