--- a/www/Styles/main.less
+++ b/www/Styles/main.less
@@ -4,8 +4,15 @@ body {
   font-family: "Montserrat";
 }
 
+@media (max-width: 1440px) {
+  body {
+    background-size: cover;
+  }
+}
+
 @media (max-device-width: 414px) {
   body {
+    background: #ffffff url("../Assets/background-mobile.jpg") no-repeat top center fixed;
     background-size: auto 100%;
   }
 }
